--- a/threejs/fxhash_Rooms/package.json
+++ b/threejs/fxhash_Rooms/package.json
@@ -24,5 +24,8 @@
     "webpack": "^5.59.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "three-csg-ts": "^3.1.10"
   }
 }
